// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RewindViewer > Content Filtering > 'removes reference markers' 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   some command @file                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > Content Filtering > 'strips expanded MCP resource content' 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   read @server3:mcp://demo-resource hello                                                                            │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > Content Filtering > 'uses displayContent if present and do…' 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   clean display content                                                                                              │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > Interaction Selection > 'cancels on Escape' > confirmation-dialog 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ Confirm Rewind                                                                                                       │
│                                                                                                                      │
│ No code changes to revert. (some time ago)                                                                           │
│                                                                                                                      │
│ Select an action:                                                                                                    │
│                                                                                                                      │
│ ● 1. Rewind conversation                                                                                             │
│   2. Do nothing (esc)                                                                                                │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > Interaction Selection > 'confirms on Enter' > confirmation-dialog 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ Confirm Rewind                                                                                                       │
│                                                                                                                      │
│ No code changes to revert. (some time ago)                                                                           │
│                                                                                                                      │
│ Select an action:                                                                                                    │
│                                                                                                                      │
│ ● 1. Rewind conversation                                                                                             │
│   2. Do nothing (esc)                                                                                                │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > Navigation > handles 'down' navigation > after-down 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   Q1                                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│   Q2                                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│   Q3                                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > Navigation > handles 'down' navigation > after-down 2`] = `
"
  ERROR  Text string "                " must be rendered inside <Text> component

 file:///home/fayerman/gemini-cli/node_modules/ink/src/reconciler.ts:230:10

 - createTextInstance (file:///home/fayerman/gemini-cli/node_modules/ink/src/reconciler.ts:230:10)
 -completeWor
             (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.developm
             ent.js:9082:42)
 -runWithFiberIn
  EV            (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.devel
                opment.js:1738:13)
 -completeUnitOfW
  rk             (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.deve
                 lopment.js:12962:19)
 -performUnitOfW
  rk            (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.devel
                opment.js:12843:11)
 -workLoopSyn
             (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.developm
             ent.js:12644:41)
 -renderRootSy
  c           (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.develop
              ment.js:12624:11)
 -performWorkOnR
  ot            (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.devel
                opment.js:12135:44)
 -performSyncWorkOn
  oot              (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.de
                   velopment.js:2446:7)
 -flushSyncWorkAcrossRoo
  s_impl                (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconcil
                        er.development.js:2294:21)
"
`;

exports[`RewindViewer > Navigation > handles 'up' navigation > after-up 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   Q1                                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│   Q2                                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Q3                                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│   Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > Navigation > handles 'up' navigation > after-up 2`] = `
"
  ERROR  Text string "                " must be rendered inside <Text> component

 file:///home/fayerman/gemini-cli/node_modules/ink/src/reconciler.ts:230:10

 - createTextInstance (file:///home/fayerman/gemini-cli/node_modules/ink/src/reconciler.ts:230:10)
 -completeWor
             (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.developm
             ent.js:9082:42)
 -runWithFiberIn
  EV            (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.devel
                opment.js:1738:13)
 -completeUnitOfW
  rk             (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.deve
                 lopment.js:12962:19)
 -performUnitOfW
  rk            (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.devel
                opment.js:12843:11)
 -workLoopSyn
             (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.developm
             ent.js:12644:41)
 -renderRootSy
  c           (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.develop
              ment.js:12624:11)
 -performWorkOnR
  ot            (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.devel
                opment.js:12135:44)
 -performSyncWorkOn
  oot              (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.de
                   velopment.js:2446:7)
 -flushSyncWorkAcrossRoo
  s_impl                (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconcil
                        er.development.js:2294:21)
"
`;

exports[`RewindViewer > Navigation > handles cyclic navigation > cyclic-down 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   Q1                                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│   Q2                                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│   Q3                                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > Navigation > handles cyclic navigation > cyclic-down 2`] = `
"
  ERROR  Text string "                " must be rendered inside <Text> component

 file:///home/fayerman/gemini-cli/node_modules/ink/src/reconciler.ts:230:10

 - createTextInstance (file:///home/fayerman/gemini-cli/node_modules/ink/src/reconciler.ts:230:10)
 -completeWor
             (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.developm
             ent.js:9082:42)
 -runWithFiberIn
  EV            (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.devel
                opment.js:1738:13)
 -completeUnitOfW
  rk             (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.deve
                 lopment.js:12962:19)
 -performUnitOfW
  rk            (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.devel
                opment.js:12843:11)
 -workLoopSyn
             (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.developm
             ent.js:12644:41)
 -renderRootSy
  c           (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.develop
              ment.js:12624:11)
 -performWorkOnR
  ot            (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.devel
                opment.js:12135:44)
 -performSyncWorkOn
  oot              (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.de
                   velopment.js:2446:7)
 -flushSyncWorkAcrossRoo
  s_impl                (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconcil
                        er.development.js:2294:21)
"
`;

exports[`RewindViewer > Navigation > handles cyclic navigation > cyclic-up 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   Q1                                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│   Q2                                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Q3                                                                                                                 │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│   Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > Navigation > handles cyclic navigation > cyclic-up 2`] = `
"
  ERROR  Text string "                " must be rendered inside <Text> component

 file:///home/fayerman/gemini-cli/node_modules/ink/src/reconciler.ts:230:10

 - createTextInstance (file:///home/fayerman/gemini-cli/node_modules/ink/src/reconciler.ts:230:10)
 -completeWor
             (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.developm
             ent.js:9082:42)
 -runWithFiberIn
  EV            (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.devel
                opment.js:1738:13)
 -completeUnitOfW
  rk             (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.deve
                 lopment.js:12962:19)
 -performUnitOfW
  rk            (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.devel
                opment.js:12843:11)
 -workLoopSyn
             (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.developm
             ent.js:12644:41)
 -renderRootSy
  c           (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.develop
              ment.js:12624:11)
 -performWorkOnR
  ot            (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.devel
                opment.js:12135:44)
 -performSyncWorkOn
  oot              (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.de
                   velopment.js:2446:7)
 -flushSyncWorkAcrossRoo
  s_impl                (/home/fayerman/gemini-cli/node_modules/react-reconciler/cjs/react-reconcil
                        er.development.js:2294:21)
"
`;

exports[`RewindViewer > Rendering > renders 'a single interaction' 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   Hello                                                                                                              │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > Rendering > renders 'full text for selected item' 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   1                                                                                                                  │
│   2...                                                                                                               │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > Rendering > renders 'nothing interesting for empty convers…' 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│ ● Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > updates content when conversation changes (background update) > after-update 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   Message 1                                                                                                          │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│   Message 2                                                                                                          │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > updates content when conversation changes (background update) > initial 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   Message 1                                                                                                          │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > updates selection and expansion on navigation > after-down 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   Line A                                                                                                             │
│   Line B...                                                                                                          │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│   Line 1                                                                                                             │
│   Line 2...                                                                                                          │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`RewindViewer > updates selection and expansion on navigation > initial-state 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Rewind                                                                                                             │
│                                                                                                                      │
│   Line A                                                                                                             │
│   Line B...                                                                                                          │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│   Line 1                                                                                                             │
│   Line 2...                                                                                                          │
│   No files have been changed                                                                                         │
│                                                                                                                      │
│ ● Stay at current position                                                                                           │
│   Cancel rewind and stay here                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│ (Use Enter to select a message, Esc to close, Right/Left to expand/collapse)                                         │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
